tpu-provisioner/admission_controller/manifests/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: mutating-webhook
spec:
  selector:
    app: mutating-webhook
  ports:
  - port: 5000
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
webhooks:
- name: mutating-webhook.default.svc
  matchPolicy: Equivalent
  admissionReviewVersions: ["v1"]
  sideEffects: None
  rules:
  - operations: ["CREATE"]
    apiGroups: ["batch"]
    apiVersions: ["v1"]
    resources: ["jobs"]
    scope: "Namespaced"
  failurePolicy: Ignore
  timeoutSeconds: 20
  clientConfig:
    caBundle: # base64 CA bundle here
    service:
      namespace: default
      name: mutating-webhook
      path: /mutate
      port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutating-webhook
  template:
    metadata:
      labels:
        app: mutating-webhook
    spec:
      containers:
      - name: mutating-webhook
        image: "" # build container image, push to repository and add it here
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: certs-volume
          readOnly: true
          mountPath: "/certs"
      volumes:
      - name: certs-volume
        secret:
          secretName: admission-tls
